--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,5 +41,5 @@ jobs:
 
       - name: Build for 2.13
         run: |
-          cd couchbase-jvm-clients
-          ./mvnw -Dscala.compat.version=2.13 -Dscala.compat.library.version=2.13.4 -DskipTests clean install
+          cd couchbase-jvm-clients/scala-client
+          ../mvnw -Dscala.compat.version=2.13 -Dscala.compat.library.version=2.13.4 -DskipTests clean install
