--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,8 +38,13 @@ jobs:
         run: |
           cd couchbase-jvm-clients
           make
+          
+      - name: Build Implicits for 2.13
+        run: |
+          cd couchbase-jvm-clients/scala-client
+          ../mvnw -Dscala.compat.version=2.13 -Dscala.compat.library.version=2.13.4 -DskipTests clean install
 
-      - name: Build for 2.13
+      - name: Build Client for 2.13
         run: |
           cd couchbase-jvm-clients/scala-client
           ../mvnw -Dscala.compat.version=2.13 -Dscala.compat.library.version=2.13.4 -DskipTests clean install
